edits styling issue on mobile where the .pins exceeds the body width

--- a/styles.css
+++ b/styles.css
@@ -587,8 +587,8 @@ figure {
 }
 
 @media screen and (max-width: 767px) {
-  body {
-    position: relative;
+  .pins {
+    overflow-x: hidden;
   }
 
   .reg-title {
